Show two sample leaflet maps
- https://www.azavea.com/blog/2016/12/05/getting-started-with-react-and-leaflet/
- https://github.com/PaulLeCam/react-leaflet/blob/master/example/components/simple.js

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-leaflet": "^1.9.1",
+    "react-leaflet-control": "^1.4.1",
     "react-scripts": "1.1.4"
   },
   "scripts": {
