--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "ajv": "^6.5.2",
     "leaflet": "^1.3.1",
+    "leaflet-toolbar": "^0.4.0-alpha.1",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
