--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-draggable": "^3.0.5",
     "react-leaflet": "^1.9.1",
     "react-leaflet-control": "^1.4.1",
     "react-scripts": "1.1.4"
