--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "dependencies": {
     "ajv": "^6.5.2",
     "leaflet": "^1.3.1",
+    "leaflet-draw": "^0.4.14",
+    "leaflet-draw-toolbar": "^0.3.0-alpha.1",
     "leaflet-toolbar": "^0.4.0-alpha.1",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-draggable": "^3.0.5",
+    "react-icons": "^2.2.7",
     "react-leaflet": "^1.9.1",
     "react-leaflet-control": "^1.4.1",
     "react-scripts": "1.1.4"
